// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions editor Node component 1`] = `
<div
  className="scoreactions"
>
  <h1
    contentEditable={false}
  >
    Score Actions
  </h1>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center"
  >
    <button
      className="button"
      onClick={[Function]}
    >
      Add Action
    </button>
  </div>
</div>
`;

exports[`Actions editor Node component adds child 1`] = `"<div class=\\"scoreactions\\"><h1 contenteditable=\\"false\\">Score Actions</h1><div class=\\"obojobo-draft--components--button is-not-dangerous align-center\\"><button class=\\"button\\">Add Action</button></div></div>"`;

exports[`Actions editor Score component 1`] = `
<div>
  <div
    className="action-data"
  >
    <h2>
      Score Range: [object Object] 
    </h2>
    <button
      aria-label="Edit Score Range"
      className="range-edit"
      onClick={[Function]}
    >
      ✎
    </button>
  </div>
  <div
    className="score-actions-page pad"
  >
    <div
      className="obojobo-draft--components--button is-not-dangerous align-center delete-button"
    >
      <button
        className="button"
        onClick={[Function]}
      >
        ×
      </button>
    </div>
  </div>
</div>
`;

exports[`Actions editor Score component changes range 1`] = `"<div><div class=\\"action-data\\"><h2>Score Range: [object Object] </h2><button class=\\"range-edit\\" aria-label=\\"Edit Score Range\\">✎</button></div><div class=\\"score-actions-page pad\\"><div class=\\"obojobo-draft--components--button is-not-dangerous align-center delete-button\\"><button class=\\"button\\">×</button></div></div></div>"`;

exports[`Actions editor Score component deletes self 1`] = `"<div><div class=\\"action-data\\"><h2>Score Range: [object Object] </h2><button class=\\"range-edit\\" aria-label=\\"Edit Score Range\\">✎</button></div><div class=\\"score-actions-page pad\\"><div class=\\"obojobo-draft--components--button is-not-dangerous align-center delete-button\\"><button class=\\"button\\">×</button></div></div></div>"`;

exports[`Actions editor changeRange updates the range 1`] = `"<div><div class=\\"action-data\\"><h2>Score Range: [object Object] </h2><button class=\\"range-edit\\" aria-label=\\"Edit Score Range\\">✎</button></div><div class=\\"score-actions-page pad\\"><div class=\\"obojobo-draft--components--button is-not-dangerous align-center delete-button\\"><button class=\\"button\\">×</button></div></div></div>"`;

exports[`Actions editor oboToSlate converts an OboComponent to a Slate node 1`] = `
Object {
  "nodes": Array [
    Object {
      "data": Object {
        "for": "dummyRange",
      },
      "nodes": Array [
        undefined,
      ],
      "object": "block",
      "type": "ObojoboDraft.Sections.Assessment.ScoreAction",
    },
  ],
  "object": "block",
  "type": "ObojoboDraft.Sections.Assessment.ScoreActions",
}
`;

exports[`Actions editor plugins.renderNode calls next 1`] = `undefined`;

exports[`Actions editor plugins.renderNode renders a score action when passed 1`] = `
<Score
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Sections.Assessment.ScoreAction",
    }
  }
/>
`;

exports[`Actions editor plugins.renderNode renders all actions when passed 1`] = `
<Node
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Sections.Assessment.ScoreActions",
    }
  }
/>
`;

exports[`Actions editor slateToObo converts a Slate node to an OboNode with content 1`] = `
Array [
  Object {
    "for": Object {},
    "page": undefined,
  },
]
`;
